syntax = "proto3";

option go_package = "github.com/Drozd0f/ttto-go/auth";

package auth;

service Auth {
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  string uid = 1;
  string username = 2;
}

message CreateUserResponse {}
